# TestingOpenGL

Abstracting/: CMakeLists.txt
Abstracting/glad/: CMakeLists.txt
Abstracting/glad/include/glad/: gl.h
Abstracting/resources/shaders/: basic.shader
Abstracting/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
FirstSteps/: CMakeLists.txt
FirstSteps/resources/shaders/: basic.shader
FirstSteps/src/: main.cpp
ModernOpenGL/src/: main.cpp
SettingUp/: CMakeLists.txt  README.txt  hello.cpp
